Upgraded vulnerable dependencies.